--- a/index.html
+++ b/index.html
@@ -8,90 +8,119 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     body {
-      margin: 0;
-      font-family: 'Montserrat', sans-serif;
-      background-color: #0e0e0e;
-      color: #fff;
-    }
-    header {
-      background-color: #111;
-      padding: 1rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 1.8rem;
-    }
-    nav a {
-      color: white;
-      margin-left: 1.5rem;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .content {
-      padding: 2rem;
-    }
-    .level {
-      background-color: #1a1a1a;
-      border: 1px solid #333;
-      padding: 1rem;
-      margin-bottom: 1rem;
-      border-radius: 10px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-      opacity: 0;
-      transform: translateY(20px);
-      animation: fadeInUp 0.6s ease forwards;
-    }
-    .level:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 4px 15px rgba(255, 255, 255, 0.1);
-    }
-    .level-info {
-      flex: 1 1 60%;
-    }
-    .level-thumbnail {
-      flex: 1 1 35%;
-      text-align: right;
-    }
-    .level-thumbnail img {
-      max-width: 100%;
-      border-radius: 10px;
-      transition: transform 0.3s ease;
-    }
-    .level-thumbnail img:hover {
-      transform: scale(1.05);
-    }
-    .level h2 {
-      margin-top: 0;
-      color: #fff;
-    }
-    @media (max-width: 768px) {
-      .level {
-        flex-direction: column;
-        text-align: left;
-      }
-      .level-thumbnail {
-        text-align: center;
-        margin-top: 1rem;
-      }
-    }
-    @keyframes fadeInUp {
-      from {
-        opacity: 0;
-        transform: translateY(20px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-  </style>
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+  background: linear-gradient(to bottom, #0e0e0e, #1a1a1a);
+  color: #fff;
+}
+
+header {
+  background: #141414;
+  padding: 1rem 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 2px solid #333;
+  box-shadow: 0 4px 10px rgba(255, 0, 100, 0.2);
+}
+
+header h1 {
+  margin: 0;
+  font-size: 2rem;
+  color: #f54291;
+}
+
+nav a {
+  color: #fff;
+  margin-left: 1.5rem;
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.3s ease;
+}
+nav a:hover {
+  color: #f54291;
+}
+
+.content {
+  padding: 2rem;
+}
+
+.level {
+  background: linear-gradient(to right, #1c1c1c, #2a2a2a);
+  border: 2px solid #f54291;
+  padding: 1.2rem;
+  margin-bottom: 1.5rem;
+  border-radius: 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  box-shadow: 0 0 15px rgba(255, 0, 100, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeInUp 0.6s ease forwards;
+}
+
+.level:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 0 20px rgba(255, 0, 100, 0.4);
+}
+
+.level-info {
+  flex: 1 1 60%;
+}
+
+.level-info h2 {
+  margin-top: 0;
+  color: #f54291;
+  font-size: 1.4rem;
+}
+
+.level-info p {
+  margin: 0.3rem 0;
+}
+
+.level-thumbnail {
+  flex: 1 1 35%;
+  text-align: right;
+}
+
+.level-thumbnail img {
+  max-width: 100%;
+  border-radius: 10px;
+  border: 2px solid #f54291;
+  box-shadow: 0 0 10px rgba(255, 0, 100, 0.5);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.level-thumbnail img:hover {
+  transform: scale(1.06);
+  box-shadow: 0 0 25px rgba(255, 0, 150, 0.8);
+}
+
+@media (max-width: 768px) {
+  .level {
+    flex-direction: column;
+    text-align: left;
+  }
+  .level-thumbnail {
+    text-align: center;
+    margin-top: 1rem;
+  }
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+    </style>
 </head>
 <body>
   <header>
